# reactix

./: .gitignore  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  contributing.html  developer-guide.html  index.html  installation.html  pixi.toml  pyproject.toml  quickstart.html  robots.txt  ruff.toml  search.json  sitemap.xml
.github/workflows/: coverage.yml  docs.yml  publish.yml  pytest.yml  ruff.yml
api/: Advection.html  Cells.html  Dispersion.html  FixedConcentrationBoundary.html  KineticReaction.html  SpatiallyConst.html  SpatiallyVarying.html  System.html  declare_species.html  index.html  make_solver.html  reaction.html  user_system_parameters.html
docs/: _quarto.yml  contributing.qmd  custom.scss_  developer-guide.qmd  index.qmd  installation.qmd  objects.json  quickstart.qmd  styles.css_
docs/api/: Advection.qmd  Cells.qmd  Dispersion.qmd  FixedConcentrationBoundary.qmd  KineticReaction.qmd  MixedSystem.qmd  SpatiallyConst.qmd  SpatiallyVarying.qmd  System.qmd  TransportSystem.qmd  _sidebar.yml  declare_species.qmd  index.qmd  make_solver.qmd  reaction.qmd  user_system_parameters.qmd
docs/examples/: index.qmd  mixed-reactor.qmd  pathogen-model.qmd  transport-model.qmd  transport-with-pymc.ipynb  transport-with-pymc.qmd  transport_with_pymc.qmd
docsarchive/docs/: how_to_build_the_doc.md  index.qmd  quickstart.qmd
docsarchive/docs/api/: index.qmd
docsarchive/docs/examples/: transport-model.ipynb  transport-with-pymc.qmd
examples/: index.html  transport-model.html
notebooks/: mixed-reactor.ipynb  pathogen-model.ipynb  simple-ode.ipynb  transport-model.ipynb  transport_with_pymc.ipynb
profiling/: profile_reactix.py
profiling/profiling_output/: cprofile_compile.prof  cprofile_compile.txt  cprofile_exec.prof  cprofile_exec.txt
site_libs/bootstrap/: bootstrap-dark-b7198d988978144cbbef329474cbaf9c.min.css
src/kinetix/: __init__.py  reactions.py  transport.py
src/reactix/: __init__.py  reaction_example.py  reactions.py  species.py  systems.py  transport.py
tests/: test_reactions.py  test_species.py  test_systems.py  test_transport.py
