[project]
name = "reactix"
version = "0.1"
description = "Reactive transport with jax and pymc"
readme = "README.md"
requires-python = ">=3.11"
keywords = ["reactive transport", "reaction", "pymc"]
authors = [
  { name = "Anna Störiko", email = "a.storiko@tudelft.nl" },
  { name = "Adrian Seyboldt", email = "adrian.seyboldt@gmail.com" },
]
maintainers = [
  { name = "Anna Störiko", email = "a.storiko@tudelft.nl" },
]

classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3 :: Only",
]

dependencies = ["numpy", "arviz", "pymc", "nutpie<0.16.0", "jax", "diffrax", "equinox"]
