[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "reactix"
version = "0.0.1"
description = "Reactive transport modelling with JAX and PyMC"
readme = "README.md"
requires-python = ">=3.11"
license = { file = "LICENSE" }
keywords = ["reactive transport", "reaction", "pymc", "jax"]
authors = [
  { name = "Anna Störiko", email = "a.storiko@tudelft.nl" },
  { name = "Adrian Seyboldt", email = "adrian.seyboldt@gmail.com" },
]
maintainers = [
  { name = "Anna Störiko", email = "a.storiko@tudelft.nl" },
]

classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3 :: Only",
]

# Core dependencies
dependencies = [
  "jax>=0.4.14",
  "equinox>=0.11.0",
  "diffrax>=0.5.0",
  "pymc>=5.0.0",
  "arviz>=0.17.0",
  "numpy>=1.24.0",
  "nutpie>=0.13.0",
  "matplotlib>=3.7.0",
  "jupyter>=1.0.0",
]

[project.optional-dependencies]

# Development environment
dev = [
  "pytest>=7.0",
  "pytest-cov>=4.0",
  "ruff>=0.4.0",
  "sphinx>=7.0",
  "sphinx-autodoc-typehints>=1.23",
  "furo>=2024.1.29",
  "myst-parser>=2.0",
  "pre-commit>=3.0",
]

[project.urls]
Homepage = "https://github.com/astoeriko/reactix"
Repository = "https://github.com/astoeriko/reactix"
Issues = "https://github.com/astoeriko/reactix/issues"

# --- Ruff (linter + formatter) ---
[tool.ruff]
line-length = 88
indent-width = 4
target-version = "py311"

#[tool.ruff.lint]
# Enable Pyflakes (`F`) and a subset of the pycodestyle (`E`) codes by default.
# Unlike Flake8, Ruff doesn't enable pycodestyle warnings (`W`) or
# McCabe complexity (`C901`) by default.
#select = ["E4", "E7", "E9", "F"]
#ignore = ["E501"]

# --- Pytest ---

# --- Hatch (build) ---
[tool.hatch.build.targets.wheel]
packages = ["src/reactix"]
